<resources>
    <string name="app_name">DO-IT</string>
    <string name="group_task">Group Task</string>
    <string name="my_tasks">My Tasks</string>

    <string name="the_more_you_discipline_yourself_to_persist_on_a_major_task_the_more_you_like_and_respect_yourself_and_the_higher_is_your_self_esteem">“The more you discipline yourself to persist on a major task, the more you like and respect yourself, and the higher is your self-esteem.”</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="add_your_tasks_here">Add your tasks here</string>
    <string name="enter_title">Enter title</string>
    <string name="view">View</string>
    <string name="are_you_sure_you_want_to_delete_this_group">Are you sure you want to delete this group?</string>
    <string name="are_you_sure_you_want_to_exit_this_group">Are you sure you want to exit this group?</string>
    <string name="cancel">Cancel</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="pick_color">Pick Color</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
</resources>